# alt-text-generator

./: .gitignore  LICENSE  README.md  config.yaml  generate-alt-text-cli  main.py  pyproject.toml  pytest.ini
_cli/: __init__.py  cli.py  sample_image_urls.txt  sample_website_urls.txt
_core/: __init__.py  app_info.py  cli_processor.py  config.py  exporter.py  http_client.py  llm_processing.py  logger.py  models.py  prompts.py  sample_urls.py  utils.py  web_scraper.py
_tests/: __init__.py  test_config.py  test_http_client.py  test_utils.py  test_web_scraper.py
