[project]
name = "alt-text-generator"
version = "0.1.0"
description = "Automagically generate German alt texts for images on web pages using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]
